adding projects and footer

--- a/app/index.scss
+++ b/app/index.scss
@@ -3,6 +3,8 @@
 @import 'components/stylesheets/Media';
 @import 'components/stylesheets/Jumbo';
 @import 'components/stylesheets/About';
+@import 'components/stylesheets/Projects';
+@import 'components/stylesheets/Footer';
 
 
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
